--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <div id="wrap">
 <div id="header"><h1>Zechen Chong's Homepage</h1></div>
 <div id="menu">
+  <ul>
+	<li><input size="15" id="search" title="Google search"
+			   onKeyPress="{if(event.keyCode==13)document.location='http://www.google.com/search?sitesearch=lh3lh3.users.sourceforge.net&q='+this.value}">
+	<li><a href="index.shtml">Home</a></li>
+  </ul>
+</div>
+
+<div id="wrap">
+<div id="header"><h1>Zechen Chong's Homepage</h1></div>
+<div id="menu">
 </ul>
 <!-- END OF THE BODY-->
 </div>
